follow z-index fix

--- a/css/global.css
+++ b/css/global.css
@@ -277,7 +277,7 @@ main {
 	position: fixed;
 	bottom: 20px;
 	left: 3%;
-	z-index: 200;
+	z-index: 100;
 }
 
 @media only screen and (min-width: 601px) {
